Fixed: prevent horizontal scrollbars on Quiet page due to corner banner. Make sure corner banner is on top of other things if the window is narrow.

--- a/www/wp-content/themes/wireload-02/styles/main.scss
+++ b/www/wp-content/themes/wireload-02/styles/main.scss
@@ -1344,7 +1344,11 @@ ul.page-numbers li > *.next:hover {
   padding-top: 1em;
 }
 
+body.quiet {
+  overflow-x: hidden;
+}
 #corner-banner {
+    z-index: 100;
     position: absolute;
     right: -70px;
     top: 55px;
